--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -44,7 +44,7 @@
 							<dd><a href="javascript:;" class="showNotice"><i class="layui-icon">&#xe645;</i><cite>系统公告</cite><span class="layui-badge-dot"></span></a></dd>
 							<dd pc><a href="javascript:;" class="functionSetting"><i class="layui-icon">&#xe620;</i><cite>功能设定</cite><span class="layui-badge-dot"></span></a></dd>
 							<dd pc><a href="javascript:;" class="changeSkin"><i class="layui-icon">&#xe61b;</i><cite>更换皮肤</cite></a></dd>
-							<dd><a href="admin/login/login.html" class="signOut"><i class="seraph icon-tuichu"></i><cite>退出</cite></a></dd>
+							<dd><a href="javascript:void(0)" onclick="logout()" class="signOut"><i class="seraph icon-tuichu"></i><cite>退出</cite></a></dd>
 						</dl>
 					</li>
 				</ul>
@@ -114,6 +114,19 @@
         $(function () {
             userMenuList = [[${session.userMenu}]];
         });
+
+        function logout() {
+            layer.confirm('确认退出登录?', {icon: 1, title: '退出登录'}, function (index) {
+                $.post('/sys/logout', function (data) {
+                    if (data.code == code_success) {
+                        layer.msg(data.msg, {icon: 1, time: 300}, function () {
+                            location.href = '/admin/login';
+                        });
+                    }
+                });
+                layer.close(index);
+            });
+        }
 	</script>
 </body>
 </html>
