--- a/src/main/resources/templates/admin/data/rule/ruleAdd.html
+++ b/src/main/resources/templates/admin/data/rule/ruleAdd.html
@@ -8,14 +8,26 @@
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">规则名称</label>
             <div class="layui-input-block">
-                <input type="text" class="layui-input" name="ruleName" th:value="*{ruleName}" lay-verify="required" placeholder="规则名称">
+                <input type="text" class="layui-input" name="ruleName" lay-verify="required|ruleName" placeholder="规则名称">
             </div>
         </div>
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">来源网站</label>
             <div class="layui-input-block">
-                <input type="text" class="layui-input" name="websiteName" th:value="*{websiteName}" lay-verify="required" placeholder="规则名称">
+                <input type="text" class="layui-input" name="websiteName" lay-verify="required" placeholder="来源网站">
             </div>
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">类型</label>
+        <div class="layui-input-block">
+            <select name="attribute" lay-verify="required">
+                <option value=""></option>
+                <option value="0">个人</option>
+                <option value="1">中介</option>
+                <option value="2">使用分类器</option>
+            </select>
         </div>
     </div>
 
@@ -36,7 +48,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">下一页</label>
         <div class="layui-input-block">
-            <input type="text" name="nextUrl" lay-verify="required" autocomplete="off" placeholder="下一页" class="layui-input">
+            <input type="text" name="nextUrl" autocomplete="off" placeholder="下一页" class="layui-input">
         </div>
     </div>
 
@@ -117,6 +129,13 @@
         </div>
     </div>
 
+    <div class="layui-form-item">
+        <label class="layui-form-label">发布时间</label>
+        <div class="layui-input-block">
+            <input type="text" name="releaseTime" autocomplete="off" placeholder="发布时间" class="layui-input">
+        </div>
+    </div>
+
     <div class="layui-form-item layui-row layui-col-xs12">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="rule_submit">立即提交</button>
@@ -128,6 +147,27 @@
 </body>
 </html>
 <script type="text/javascript">
+    form.verify({
+        ruleName: function (value) {
+            var msg = '';
+            $.ajax({
+                url: "/data/rule/verify",
+                type: "GET",
+                async: false,
+                data: {
+                    ruleName: value
+                },
+                dataType: "json",
+                success: function (data) {
+                    if (data.code === code_fail) {
+                        msg = data.msg;
+                    }
+                }
+            });
+            return msg;
+        }
+    });
+
     layui.formSubmit('rule_submit', '/data/rule/save');
 
 </script>
