--- a/src/main/resources/templates/admin/data/rule/ruleInfo.html
+++ b/src/main/resources/templates/admin/data/rule/ruleInfo.html
@@ -10,14 +10,26 @@
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">规则名称</label>
             <div class="layui-input-block">
-                <input type="text" class="layui-input" name="ruleName" th:value="*{ruleName}" lay-verify="required" placeholder="规则名称">
+                <input type="text" class="layui-input" name="ruleName" th:value="*{ruleName}" lay-verify="required|ruleName" placeholder="规则名称">
             </div>
         </div>
         <div class="magb15 layui-col-md6">
             <label class="layui-form-label">来源网站</label>
             <div class="layui-input-block">
-                <input type="text" class="layui-input" name="websiteName" th:value="*{websiteName}" lay-verify="required" placeholder="规则名称">
+                <input type="text" class="layui-input" name="websiteName" th:value="*{websiteName}" lay-verify="required" placeholder="来源网站">
             </div>
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">类型</label>
+        <div class="layui-input-block">
+            <select name="attribute" lay-verify="required">
+                <option value=""></option>
+                <option th:selected="*{attribute == 0}" value="0">个人</option>
+                <option th:selected="*{attribute == 1}" value="1">中介</option>
+                <option th:selected="*{attribute == 2}" value="2">使用分类器</option>
+            </select>
         </div>
     </div>
 
@@ -38,7 +50,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">下一页</label>
         <div class="layui-input-block">
-            <input type="text" name="nextUrl" th:value="*{nextUrl}" lay-verify="required" autocomplete="off" placeholder="下一页" class="layui-input">
+            <input type="text" name="nextUrl" th:value="*{nextUrl}" autocomplete="off" placeholder="下一页" class="layui-input">
         </div>
     </div>
 
@@ -119,6 +131,13 @@
         </div>
     </div>
 
+    <div class="layui-form-item">
+        <label class="layui-form-label">发布时间</label>
+        <div class="layui-input-block">
+            <input type="text" name="releaseTime" th:value="*{releaseTime}" autocomplete="off" placeholder="发布时间" class="layui-input">
+        </div>
+    </div>
+
     <div class="layui-form-item layui-row layui-col-xs12">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="rule_submit">立即提交</button>
@@ -127,9 +146,33 @@
     </div>
 </form>
 <div th:replace="~{admin/common/common :: script}"></div>
+
+<script type="text/javascript" th:inline="javascript">
+    var ruleName = [[${rule.ruleName}]];
+    form.verify({
+        ruleName: function (value) {
+            var msg = '';
+            if (ruleName != value) {
+                $.ajax({
+                    url: "/data/rule/verify",
+                    type: "GET",
+                    async: false,
+                    data: {
+                        ruleName: value
+                    },
+                    dataType: "json",
+                    success: function (data) {
+                        if (data.code === code_fail) {
+                            msg = data.msg;
+                        }
+                    }
+                });
+            }
+            return msg;
+        }
+    });
+
+    layui.formSubmit('rule_submit', '/data/rule/update');
+</script>
 </body>
 </html>
-<script type="text/javascript">
-    layui.formSubmit('rule_submit', '/data/rule/update');
-
-</script>
