--- a/src/main/resources/templates/admin/data/spider/spiderList.html
+++ b/src/main/resources/templates/admin/data/spider/spiderList.html
@@ -80,7 +80,7 @@
         if (layEvent === 'edit') { //修改
             alertByFull("修改项目", "/data/spider/info/" + data.spiderId);
         } else if (layEvent === 'upload') {
-
+            alertByFull("部署项目", "/data/spider/upload/" + data.spiderId);
         } else if (layEvent === 'delete') { // 删除
             layer.confirm('确认删除项目?', {icon: 3, title: '提示'}, function (index) {
                 var selectIds = [];
